git-svn-id: svn://svn.r-forge.r-project.org/svnroot/season@6 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/season/trunk/NAMESPACE
+++ b/season/trunk/NAMESPACE
@@ -1,6 +1,6 @@
 export(casecross, ciPhase, cipolygon, cosinor, flagleap, invyrfraction,
        kalfil,monthglm, nochars, nscosinor, peri, phasecalc, plotCircle,
-       plotCircular,
+       plotCircular,monthmean,createAdj, monthplot, sinusoid,
        plot.Cosinor,plot.monthglm, plot.nsCosinor, print.casecross,
        print.Cosinor, print.monthglm, print.nsCosinor, print.summary.Cosinor,
        print.summary.monthglm, print.summary.nsCosinor, rinvgamma,
@@ -9,6 +9,7 @@ export(casecross, ciPhase, cipolygon, cosinor, flagleap, invyrfraction,
 S3method(print, casecross)
 S3method(print, Cosinor)
 S3method(print, monthglm)
+S3method(print, Monthmean)
 S3method(print, nsCosinor)
 S3method(print, summary.Cosinor)
 S3method(print, summary.monthglm)
@@ -20,4 +21,5 @@ S3method(summary, nsCosinor)
 S3method(plot, Cosinor)
 S3method(plot, monthglm)
 S3method(plot, nsCosinor)
+S3method(plot, Monthmean)
 importFrom(coda, mcmc)
