git-svn-id: svn://svn.r-forge.r-project.org/svnroot/season@7 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/season/trunk/NAMESPACE
+++ b/season/trunk/NAMESPACE
@@ -1,6 +1,6 @@
 export(casecross, ciPhase, cipolygon, cosinor, flagleap, invyrfraction,
        kalfil,monthglm, nochars, nscosinor, peri, phasecalc, plotCircle,
-       plotCircular,monthmean,createAdj, monthplot, sinusoid,
+       plotCircular,monthmean,createAdj, plotMonth, sinusoid,
        plot.Cosinor,plot.monthglm, plot.nsCosinor, print.casecross,
        print.Cosinor, print.monthglm, print.nsCosinor, print.summary.Cosinor,
        print.summary.monthglm, print.summary.nsCosinor, rinvgamma,
