--- a/pkg/season/DESCRIPTION
+++ b/pkg/season/DESCRIPTION
@@ -6,6 +6,6 @@ Date: 2010-03-03
 Author: Adrian Barnett <a.barnett@qut.edu.au>, Peter Baker <p.baker1@uq.edu.au>
 Maintainer: Adrian Barnett <a.barnett@qut.edu.au>, Peter Baker <p.baker1@uq.edu.au>
 Description: Routines for the seasonal analysis of health data, including regression models, time-stratified case-crossover, plotting functions and residual checks.
-Depends: lattice, MASS, mgcv, survival, coda
+Depends: R (>= 2.8.0), lattice, MASS, mgcv, survival, coda
 License: GPL (>= 3)
 
