--- a/pkg/season/DESCRIPTION
+++ b/pkg/season/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: season
 Type: Package
 Title: Seasonal analysis of health data
-Version: 0.2-5
-Date: 2010-07-28
+Version: 0.2-6
+Date: 2011-11-01
 Author: Adrian Barnett <a.barnett@qut.edu.au>, Peter Baker <p.baker1@uq.edu.au>
 Maintainer: Adrian Barnett <a.barnett@qut.edu.au>, Peter Baker <p.baker1@uq.edu.au>
-Description: Routines for the seasonal analysis of health data, including regression models, time-stratified case-crossover, plotting functions and residual checks.
-Depends: R (>= 2.10.0), lattice, MASS, mgcv, survival, coda
+Description: Routines for the seasonal analysis of health data, including regression models, time-stratified case-crossover, plotting functions and residual checks. Thanks to Yuming Guo for checking the case-crossover code.
+Depends: R (>= 2.13.0), lattice, MASS, mgcv, survival, coda
 License: GPL (>= 3)
 
