Added nonlin test with print/plot methods, aaft test and nscosinor-initial functions
aaft: Amplitude Adjusted Fourier Transform (AAFT)
nonlintestA bootstrap test of non-linearity in a time series using the third-order moment
nscosinor-initial: Initial values for non-stationary cosinor
third: Estimated third order moment for a time series:

git-svn-id: svn://svn.r-forge.r-project.org/svnroot/season@25 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/season/NAMESPACE
+++ b/pkg/season/NAMESPACE
@@ -5,7 +5,8 @@ export(casecross, ciPhase, cipolygon, cosinor, flagleap, invyrfraction,
        print.Cosinor, print.monthglm, print.nsCosinor, print.summary.Cosinor,
        print.summary.monthglm, print.summary.nsCosinor, rinvgamma,
        seasrescheck, summary.casecross, summary.Cosinor, summary.monthglm,
-       summary.nsCosinor, wtest, yrfraction)
+       summary.nsCosinor, wtest, yrfraction,
+       aaft, nonlintest, third)
 S3method(print, casecross)
 S3method(print, Cosinor)
 S3method(print, monthglm)
@@ -14,6 +15,7 @@ S3method(print, nsCosinor)
 S3method(print, summary.Cosinor)
 S3method(print, summary.monthglm)
 S3method(print, summary.nsCosinor)
+S3method(print, nonlintest)
 S3method(summary, casecross)
 S3method(summary, Cosinor)
 S3method(summary, monthglm)
@@ -22,4 +24,5 @@ S3method(plot, Cosinor)
 S3method(plot, monthglm)
 S3method(plot, nsCosinor)
 S3method(plot, Monthmean)
+S3method(plot, nonlintest)
 importFrom(coda, mcmc)
